# test-mcp-server-on-ic-canister

./: Cargo.toml  README.md  dfx.json
.idx/: dev.nix
src/test-mcp-server-on-ic-canister-backend/: Cargo.toml  test-mcp-server-on-ic-canister-backend.did
src/test-mcp-server-on-ic-canister-backend/src/: handler.rs  lib.rs  rpc_model.rs  server.rs
