[package]
name = "test-mcp-server-on-ic-canister-backend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
ic-http-certification = "3.0.3"

rmcp = { git = "https://github.com/okoyfoeciov/rust-sdk", branch = "main" }
ic_rmcp = { git = "https://github.com/ByteSmithLabs/ic-rmcp" , branch = "main" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
